<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingEnd="16dp"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e127"
        android:textSize="25sp"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        />

    <RelativeLayout
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    >

    <TextView
        android:id="@+id/tvNc"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/e128" />

    <EditText
        android:id="@+id/txtNc"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvNc"
        android:layout_toEndOf="@+id/tvNc"
        android:inputType="text"
        android:text="" />


</RelativeLayout>


    <RelativeLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        >

        <TextView
            android:id="@+id/tvFevha"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/e129" />

        <EditText
            android:id="@+id/txtFecha"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tvFevha"
            android:layout_toEndOf="@+id/tvFevha"
            android:inputType="text"
            android:text="" />


    </RelativeLayout>




    <RelativeLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        >

        <TextView
            android:id="@+id/tvNe"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/e130" />

        <EditText
            android:id="@+id/txtNe"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tvNe"
            android:layout_toEndOf="@+id/tvNe"
            android:inputType="text"
            android:text="" />


    </RelativeLayout>

    <Button
        android:id="@+id/btnGuardarA"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Guardar Respuestas"
        android:layout_marginTop="20dp"
        android:theme="@style/PrimaryColoredButton"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:layout_gravity="center"/>



</LinearLayout>


