<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultaDomicilio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Elija a la persona para verificar su domicilio"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginBottom="20dp"/>

        <Spinner
            android:id="@+id/sConsultaDomicilio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/GMapsLauncher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ir a domicilio" />

        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/cdCalle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCalleNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvColonia"
                android:layout_alignParentTop="true"
                android:layout_marginStart="31dp"
                android:layout_marginLeft="31dp"
                android:layout_toEndOf="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:layout_weight="1"
                android:text="Probando Calle" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_weight="0.5"
                android:text="@string/cdColonia"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvColonia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignStart="@+id/tvCalleNumero"
                android:layout_alignLeft="@+id/tvCalleNumero"
                android:layout_alignBottom="@+id/textView2"
                android:layout_weight="1"
                android:text="Probando Colonia" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_weight="0.5"
                android:text="@string/cdEstado"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignStart="@+id/tvColonia"
                android:layout_alignLeft="@+id/tvColonia"
                android:layout_weight="1"
                android:text="Probando Estado" />

        </RelativeLayout>





    </LinearLayout>

</android.support.constraint.ConstraintLayout>